--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,12 +9,23 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Iniciar Sesión</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-item>
+    <ion-label position="floating">Usuario</ion-label>
+    <ion-input [(ngmodel)]="usuario"></ion-input>
+  </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-item>
+    <ion-label position="floating">Contraseña</ion-label>
+    <ion-input [(ngmodel)]="clave" type="password"></ion-input>
+  </ion-item>
+
+  <ion-button color="danger" expand="full" (click)="ingresar()"><ion-icon name="enter">
+  </ion-icon>Ingresar</ion-button>
+  <ion-button color="dark" expand="full" (click)="limpiar()"><ion-icon name="trash">
+  </ion-icon>Limpiar</ion-button>
+
+
 </ion-content>
